<resources>
    <string name="app_name">Nadiya</string>
    <string name="to_do_list">To-Do List</string>
    <string name="daily_scheduler">Daily Scheduler</string>
    <string name="my_diary">My Diary</string>
    <string name="period_tracker">Period Tracker</string>
    <string name="enter_a_task">Enter a task</string>
    <string name="add_task">Add Task</string>
    <string name="edit_task">Edit Task</string>
    <string name="created_at">created_at</string>
    <string name="to_do_list_h">To-Do List</string>
    <string name="enter_task_desc">enter task desc</string>
    <string name="enter_task_title">enter task title</string>
    <string name="select_start_date">select start created_at</string>
    <string name="example_date">eg: 12/05/1998</string>
    <string name="select_end_date">select end created_at</string>
    <string name="submit">Submit</string>
    <string name="spe">-</string>
    <string name="select_start_time">Select Start Time</string>
    <string name="select_end_time">Select End Time</string>
    <string name="i_love_you_nadiya">I love you, Nadiya</string>
    <string name="pause_alarm">Pause Alarm</string>
    <string name="dear_nadiya">-/- Dear Nadiya -/-</string>
    <string name="memories">Memories</string>
    <string name="special_days">Our Special Days</string>
    <string name="together_for">Together For</string>
    <string name="days">Days</string>
    <string name="_366">366</string>
    <string name="add_special_days">Add Special Days</string>
    <string name="choose_special_date">Choose Special Date</string>
    <string name="add_my_special_day">Add My Special Day</string>
    <string name="question1">i know you are my love, could u please confirm this?</string>
    <string name="question3">What about your day?</string>
    <string name="question4">Hope you are doing great, my darling!</string>
    <string name="question5">How is my beautiful bchha today?</string>
    <string name="question6">Missed you so much! How are you?</string>
    <string name="question7">How is everything going, my sweetheart?</string>
    <string name="question8">Did you smile today, love?</string>
    <string name="question9">Thinking of you, my angel. How are you?</string>
    <string name="question10">How is your mood, my love?</string>
    <string name="question11">How is my queen feelings today?</string>
    <string name="question2">How are you, my love?</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="days_left">Days Left</string>
    <string name="november">November</string>
    <string name="write">write</string>
    <string name="read">read</string>
    <string name="recent_enteries">Recent Enteries</string>
    <string name="add_a_title_to_this_entry">Add a title to this entry</string>
    <string name="write_something">Write something...</string>
    <string name="title">Title</string>
    <string name="story">Story</string>
    <string name="fdghjkfghjk">fdghjkfghjk</string>
    <string name="read_only">read-only</string>
    <string name="back">Back</string>
    <string name="our_story">Our Story</string>
    <string name="history">History</string>
    <string name="token">token</string>
</resources>