<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/birchwood"
    tools:context=".WriteDiaryActivity">

    <TextView
        android:id="@+id/top_header"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center"
        android:textColor="@color/otter_brown"
        android:textStyle="bold"
        android:textSize="20sp"
        android:fontFamily="sans-serif-black"
        android:layout_margin="5dp"
        android:textAllCaps="true"
        android:text="@string/write"/>

    <TextView
        android:id="@+id/header_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:textSize="20sp"
        android:textStyle="bold"
        android:padding="5dp"
        android:textColor="@color/otter_brown"
        android:text="@string/title"/>

    <EditText
        android:id="@+id/editTextTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#00A48888"
        android:textColor="@color/black"
        android:textColorHint="@color/otter_brown"
        android:layout_margin="5dp"
        android:padding="5dp"
        android:hint="@string/add_a_title_to_this_entry" />

    <TextView
        android:id="@+id/header_story"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:textSize="19sp"
        android:padding="5dp"
        android:textColor="@color/otter_brown"
        android:text="@string/story"/>

    <EditText
        android:id="@+id/editTextStory"
        android:layout_width="match_parent"
        android:gravity="top"
        android:padding="5dp"
        android:textColorHint="@color/otter_brown"
        android:textColor="@color/black"
        android:background="#00A48888"
        android:layout_margin="5dp"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:hint="@string/write_something" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:gravity="end"
        android:padding="5dp"
        android:orientation="horizontal">
        <androidx.cardview.widget.CardView
            android:id="@+id/submitButton"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="@color/otter_brown"
            app:cardCornerRadius="28dp"
            android:padding="5dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="center"
                android:textColor="@color/birchwood"
                android:textStyle="bold"
                android:text="@string/submit"/>
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:id="@+id/backButton"
            android:layout_width="150dp"
            android:visibility="gone"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="@color/otter_brown"
            app:cardCornerRadius="28dp"
            android:padding="5dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="center"
                android:textColor="@color/birchwood"
                android:textStyle="bold"
                android:text="@string/back"/>
        </androidx.cardview.widget.CardView>
    </LinearLayout>
</LinearLayout>