<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DailyScheduler"
    android:background="@drawable/wall3"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="UselessParent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/daily_scheduler"
        android:textAlignment="center"
        android:layout_marginTop="10dp"
        android:textColor="#000"
        android:textStyle="bold"
        android:textSize="25sp"
        android:fontFamily="cursive"/>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        app:cardBackgroundColor="#BEAB274F"
        android:layout_margin="20dp"
        app:cardCornerRadius="8dp"
        android:elevation="0dp"
        app:cardElevation="0dp"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
    <EditText
        android:id="@+id/scheduledTaskTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:padding="10dp"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        android:background="@null"
        android:hint="@string/enter_task_title"/>
    <EditText
        android:id="@+id/scheduledTaskDesc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:layout_margin="10dp"
        android:background="@null"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        android:hint="@string/enter_task_desc"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_margin="10dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/schedulerStartDate"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:layout_margin="10dp"
                    android:text="@string/select_start_time"
                    android:textColorHint="@color/white"
                    android:textColor="@color/white"
                    android:gravity="center_vertical"/>
                <ImageView
                    android:id="@+id/schedulerStartDateIcon"
                    android:layout_width="match_parent"
                    android:layout_weight="5"
                    android:layout_height="match_parent"
                    android:text="@string/select_end_time"
                    android:src="@drawable/watch"
                    android:gravity="center_vertical"/>
            </LinearLayout>
            <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_margin="10dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/schedulerEndDate"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_margin="10dp"
                android:text="@string/select_end_date"
                android:textColorHint="@color/white"
                android:textColor="@color/white"
                android:gravity="center_vertical"/>
            <ImageView
                android:id="@+id/schedulerEndDateIcon"
                android:layout_width="match_parent"
                android:layout_weight="5"
                android:layout_height="match_parent"
                android:text="@string/select_start_date"
                android:src="@drawable/watch"
                android:gravity="center_vertical"/>
        </LinearLayout>

            <TextView
                android:id="@+id/submitSchedulerTask"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/submit"
                android:textColor="@color/white"
                android:textSize="22sp"
                android:gravity="center"
                android:layout_margin="15dp"
                android:textStyle="bold" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/dailySchedulerRV"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    </LinearLayout>
    </ScrollView>
</LinearLayout>
