<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="5dp"
    app:cardCornerRadius="8dp"
    android:elevation="0dp"
    app:cardElevation="0dp"
    app:cardBackgroundColor="#D3FFFFFF">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <ImageView
            android:id="@+id/specialDaysItemTitleIcon"
            android:layout_marginStart="5dp"
            android:layout_width="24dp"
            android:src="@drawable/cake"
            android:layout_height="24dp"
            android:layout_gravity="center"/>
        <TextView
            android:id="@+id/specialDaysItemTitle"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:text="@string/special_days"
            android:layout_marginStart="5dp"
            android:gravity="center_vertical"
            android:layout_weight="1"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:gravity="end"
            android:layout_marginEnd="5dp"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/specialDaysItemRemainingDays"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/_366"
                android:layout_marginStart="5dp"
                android:textStyle="bold"
                android:gravity="center_vertical"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/days_left"
                android:layout_marginStart="5dp"
                android:gravity="center_vertical"
                />
        </LinearLayout>
    </LinearLayout>

</androidx.cardview.widget.CardView>