<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/wall6"
    android:orientation="vertical"
    tools:context=".AddSpecialDaysActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:textColor="@color/white"
        android:fontFamily="cursive"
        android:gravity="center"
        android:textStyle="italic|bold"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginTop="25dp"
        android:textSize="20sp"
        android:text="@string/add_special_days"/>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="8dp"
        app:cardBackgroundColor="#A2AB274F"
        android:layout_margin="20dp"
        android:elevation="0dp"
        app:cardElevation="0dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="20dp"
            android:paddingBottom="20dp"
            android:orientation="vertical">
            <EditText
                android:id="@+id/etAddSpecialDaysTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_a_task"
                android:layout_marginTop="10dp"
                android:background="@null"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                />

            <LinearLayout
                android:id="@+id/chooseSpecialDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/chosenDate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/choose_special_date"
                    android:layout_marginTop="10dp"
                    android:background="@null"
                    android:layout_weight="1"
                    android:textSize="18sp"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    />

                <ImageView
                    android:layout_width="50dp"
                    android:layout_weight="1"
                    android:layout_height="50dp"
                    android:layout_marginEnd="5dp"
                    android:src="@drawable/calendar"/>

            </LinearLayout>

            <TextView
                android:id="@+id/addSpecialDayBtn"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="center"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:layout_marginTop="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginBottom="10dp"
                android:layout_marginEnd="10dp"
                android:text="@string/add_my_special_day" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>