<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".AuthActivity"
    android:background="@drawable/wall3"
    android:gravity="center">

    <TextView
        android:id="@+id/authGreeting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_margin="40dp"
        android:fontFamily="cursive"
        android:textStyle="italic|bold"
        android:textSize="30sp"
        android:textColor="#000"
        android:padding="5dp"/>

    <EditText
        android:id="@+id/emailEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:background="#00000000"
        android:textColorHint="#000"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:padding="5dp"
        android:textColor="#000"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/passwordEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:padding="5dp"
        android:textColor="#000"
        android:textColorHint="#000"
        android:background="#00000000"
        android:inputType="textPassword" />

    <androidx.cardview.widget.CardView
        android:id="@+id/loginButton"
        app:cardCornerRadius="5dp"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:text="@string/login"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginTop="5dp"
        android:elevation="0dp"
        app:cardElevation="0dp"
        app:cardBackgroundColor="#8FFA0C0C"
        android:layout_marginBottom="5dp" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:textStyle="italic|bold"
            android:text="@string/login"
            android:textColor="#fff"/>
    </androidx.cardview.widget.CardView>

</LinearLayout>