<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/wall4"
    tools:context=".TodoList">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/to_do_list_h"
        android:textAlignment="center"
        app:cardBackgroundColor="?attr/cardBackgroundColor"
        android:layout_marginTop="10dp"
        android:textColor="#000"
        android:textStyle="italic|bold"
        android:textSize="22sp"
        android:fontFamily="cursive"/>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="8dp"
        app:cardBackgroundColor="#A2AB274F"
        android:layout_margin="20dp"
        android:elevation="0dp"
        app:cardElevation="0dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <EditText
                android:id="@+id/editTextTask"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_a_task"
                android:layout_marginTop="10dp"
                android:background="@null"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                />
            <TextView
                android:id="@+id/buttonAdd"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="center"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:layout_marginTop="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginBottom="10dp"
                android:layout_marginEnd="10dp"
                android:text="@string/add_task" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/listViewTasks"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:divider="#00000000"
        android:dividerHeight="5dp"
        android:layout_margin="5dp"/>

</LinearLayout>