<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_marginBottom="5dp"
    app:cardBackgroundColor="#B1DC143C"
    android:padding="8dp"
    android:elevation="0dp"
    app:cardElevation="0dp"
    app:cardCornerRadius="8dp">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    android:orientation="vertical">

    <TextView
        android:id="@+id/schedulerTaskItemDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="5dp"
        android:text="@string/created_at"
        android:textAllCaps="true"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:textSize="14sp" />
    <TextView
        android:id="@+id/schedulerTaskItemTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="18sp" />
    <TextView
        android:id="@+id/schedulerTaskItemDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:textSize="16sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/schedulerTaskItemStartDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:text="@string/app_name"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:textSize="16sp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:text="@string/spe"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/schedulerTaskItemEndDate"
            android:layout_marginLeft="8dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:layout_width="wrap_content"
            android:textSize="16sp"
            android:textStyle="bold"/>
    </LinearLayout>
</LinearLayout>
</androidx.cardview.widget.CardView>
