<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="5dp"
    app:cardCornerRadius="14dp"
    app:cardBackgroundColor="@color/otter_brown"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tokenBin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textStyle="bold|italic"
            android:fontFamily="cursive"
            android:textSize="19sp"
            android:layout_margin="5dp"
            android:textColor="@color/white"
            android:text="@string/example_date"/>

        <LinearLayout
            android:id="@+id/firstBinLayout"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/dateBin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:textColor="@color/white"
                android:layout_weight="1"
                android:text="@string/example_date"/>
            <ImageView
                android:id="@+id/dropBin"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="4"
                android:layout_margin="5dp"
                android:src="@drawable/drop"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/secondBinLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:orientation="vertical">
        <TextView
            android:id="@+id/titleBin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:layout_margin="5dp"
            android:text="@string/title"/>

        <TextView
            android:id="@+id/userBin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:textColor="@color/white"
            android:text="@string/app_name"/>

            <androidx.cardview.widget.CardView
                android:id="@+id/restoreCard"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_margin="20dp"
                android:layout_gravity="center"
                app:cardCornerRadius="8dp">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="Restore"
                    android:gravity="center"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:paddingStart="20dp"
                    android:paddingEnd="20dp"/>
            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </LinearLayout>

</androidx.cardview.widget.CardView>